<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dip"
    android:background="@drawable/button_background_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Return to call - 12:09"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5sp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paraguay"
            android:textColor="#c6ecc9"
            android:layout_marginBottom="10sp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/one"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/two"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A B C"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/three"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D E F"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/four"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="G H I"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/five"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="J K L"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/six"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M N O"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/seven"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="P Q R S"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <Button
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/eight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T U V"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/nine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:textSize="30sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/nine"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="W X Y Z"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/asterisk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@color/colorWhite"
            android:text="@string/asterisk"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@color/colorWhite"
            android:text="@string/zero"/>

        <Button
            android:id="@+id/hash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@color/colorWhite"
            android:text="@string/hash"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>