<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/shareLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:layout_alignParentLeft="true"

            android:textSize="16dp"
            android:text="@string/go_back"
            android:textColor="@color/colorSkyBlue"
            android:id="@+id/btnGoback"
            android:fontFamily="sans-serif"
            android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/btnSave"
            android:text="@string/cancel"
            android:textColor="@color/colorGray"
            android:background="@null"
            android:fontFamily="sans-serif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_skyblue"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:inputType="text"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif"/>

    </RelativeLayout>

</RelativeLayout>
