<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorbgGray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/header"
        android:padding="5dp"
        android:layout_marginBottom="10dp">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/vector_drawable_logo__sign"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:id="@+id/btn_NavIcon"
            android:layout_gravity="center"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/imgProfile"
            android:background="@drawable/button_background_lightpink"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/exit_wizard"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:textSize="16dp"
            android:layout_marginRight="20dp"/>


    </RelativeLayout>




            <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="10dp"
             app:cardCornerRadius="5dp"
             android:background="@color/colorWhite"
             android:layout_margin="10dp"
             android:layout_below="@+id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:padding="10dp"
               android:id="@+id/shareLayout">

                <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="@drawable/button_border_skyblue"
                     android:src="@drawable/vector_drawable_icon__right_caret"
                     android:padding="10dp"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
                     android:id="@+id/Imgrefresh"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_border_skyblue"
                    android:src="@drawable/vector_drawable_shape"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/ImgShare"
                    android:layout_toRightOf="@+id/Imgrefresh"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_skyblue"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/btnOtherOption"
                    android:text="@string/select_tracking_sources"
                    android:textColor="@color/colorWhite"
                    android:inputType="text"
                    android:layout_toRightOf="@+id/ImgShare"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <View
               android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:layout_below="@+id/shareLayout"
               android:orientation="vertical"
               android:padding="20dp"
               android:background="@color/colorGray"
               android:id="@+id/viewborder">
            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewborder"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/chouse_tracking_phn_no"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textAllCaps="true"
                    android:inputType=""
                    android:gravity="center"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLiteBlack"
                    android:text="@string/destinaton_no_and_pool_size"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:padding="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/name"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="16dp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border_gray"
                    android:padding="10dp"
                    android:textSize="16dp"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/example_referrall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/colorGray"
                    android:text="@string/What_Should_i_name_this"
                    android:background="@drawable/button_dot_border_gray" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/Destination_Number"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="16dp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border_gray"
                    android:padding="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/colorGray"
                    android:hint="@string/number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/colorGray"
                    android:text="@string/Which_phone_number_do_i_use"
                    android:background="@drawable/button_dot_border_gray"
                    android:layout_marginBottom="30dp"/>






            </LinearLayout>

            </LinearLayout>
          </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>